# dlambda

./: CMakeLists.txt
cmake/modules/: FindLLVM.cmake
include/: CMakeLists.txt
include/dlambda/: exceptions.hpp  exported_functions.hpp  get_type.hpp  get_value.hpp  proto.hpp  test.cpp  type.hpp  type_traits.hpp  usual_arithmetic_conversions.hpp  value.hpp  void_pointer.cpp  void_pointer.s
include/dlambda/compiler/: compiler.hpp  expression.hpp  get_llvm_constant_value.hpp  get_llvm_function_type.hpp  get_llvm_type.hpp  integral_promotion.hpp  ir_builder.hpp  usual_arithmetic_conversion.hpp
include/dlambda/compiler/node/: address_cast.hpp  address_of.hpp  address_to_pointer.hpp  arithmetic_cast.hpp  array_cast.hpp  assign.hpp  bitwise_and.hpp  bitwise_and_assign.hpp  bitwise_or.hpp  bitwise_or_assign.hpp  bitwise_xor.hpp  bitwise_xor_assign.hpp  c_style_cast.hpp  comma.hpp  complement.hpp  const_cast.hpp  dereference.hpp  dereference_cast.hpp  divides.hpp  divides_assign.hpp  equal_to.hpp  greater.hpp  greater_equal.hpp  implicit_cast.hpp  less.hpp  less_equal.hpp  logical_and.hpp  logical_not.hpp  logical_or.hpp  logical_xor.hpp  mem_ptr.hpp  minus.hpp  minus_assign.hpp  modulus.hpp  modulus_assign.hpp  multiplies.hpp  multiplies_assign.hpp  native_cast.hpp  negate.hpp  not_equal_to.hpp  (+18 more)
include/dlambda/executor/: executor.hpp
include/dlambda/mangle/: symbol.hpp
include/dlambda/mangle/rule/: hoge.cpp  hoge.s  itanium.hpp
include/dlambda/proto/: display_expr.hpp  display_value.hpp  eval.hpp  is_node.hpp  node.hpp  operators.hpp
include/dlambda/proto/node/: .for.hpp.swp  any.hpp  binary_operator.hpp  cast.hpp  construct.hpp  convert_args.hpp  for.hpp  function.hpp  get_top_operator_tag.hpp  if.hpp  literal.hpp  make_node.hpp  make_node_fwd.hpp  match.hpp  match_failed.hpp  placeholder.hpp  terminal.hpp  ternary_operator.hpp  unary_operator.hpp  while.hpp
include/dlambda/type_traits/: add_const.hpp  add_cv.hpp  add_lvalue_reference.hpp  add_pointer.hpp  add_reference.hpp  add_rvalue_reference.hpp  add_volatile.hpp  conditional.hpp  decay.cpp  extent.hpp  floating_point_promotion.hpp  function_traits.hpp  has_bit_and.hpp  has_const.hpp  has_ordered.hpp  has_trivial_assign.hpp  has_trivial_constructor.hpp  has_trivial_copy.hpp  has_trivial_destructor.hpp  has_volatile.hpp  integral_promotion.hpp  is_aggregated.hpp  is_arithmetic.hpp  is_array.hpp  is_class.hpp  is_compound.hpp  is_const.hpp  is_copy_constructible.hpp  is_empty.hpp  is_enum.hpp  is_floating_point.hpp  is_function.hpp  is_fundamental.hpp  is_integral.hpp  is_lvalue_reference.hpp  is_member_function_pointer.hpp  is_member_object_pointer.hpp  is_member_pointer.hpp  is_nothrow_move_assignable.hpp  is_nothrow_move_constructible.hpp  (+24 more)
include/dlambda/utility/: is_array.hpp
src/: CMakeLists.txt
src/compile/: .compiler.cpp.swp  CMakeLists.txt  address_cast.cpp  address_of.cpp  address_to_pointer.cpp  arithmetic_cast.cpp  array_cast.cpp  assign.cpp  bitwise_and.cpp  bitwise_or.cpp  bitwise_xor.cpp  c_style_cast.cpp  compiler.cpp  complement.cpp  const_cast.cpp  dereference.cpp  divides.cpp  equal_to.cpp  get_llvm_constant_value.cpp  get_llvm_function_type.cpp  get_llvm_type.cpp  greater.cpp  greater_equal.cpp  implicit_cast.cpp  integral_promotion.cpp  less.cpp  less_equal.cpp  logical_and.cpp  logical_not.cpp  logical_or.cpp  logical_xor.cpp  minus.cpp  modulus.cpp  multiplies.cpp  native_cast.cpp  negate.cpp  not_equal_to.cpp  plus.cpp  post_dec.cpp  post_inc.cpp  (+16 more)
src/executor/: CMakeLists.txt  executor.cpp  test.cpp  test2.cpp
src/proto/: CMakeLists.txt  match.cpp  test.cpp  test2.cpp
src/type_traits/: CMakeLists.txt  add_const.cpp  add_cv.cpp  add_lvalue_reference.cpp  add_pointer.cpp  add_reference.cpp  add_rvalue_reference.cpp  add_volatile.cpp  conditional.cpp  decay.cpp  extent.cpp  floating_point_promotion.cpp  function_traits.cpp  has_bit_and.cpp  has_trivial_assign.cpp  has_trivial_constructor.cpp  has_trivial_copy.cpp  has_trivial_destructor.cpp  integral_promotion.cpp  is_aggregated.cpp  is_arithmetic.cpp  is_array.cpp  is_class.cpp  is_compound.cpp  is_const.cpp  is_copy_constructible.cpp  is_empty.cpp  is_enum.cpp  is_floating_point.cpp  is_function.cpp  is_fundamental.cpp  is_integral.cpp  is_lvalue_reference.cpp  is_member_function_pointer.cpp  is_member_object_pointer.cpp  is_member_pointer.cpp  is_nothrow_move_assignable.cpp  is_nothrow_move_constructible.cpp  is_object.cpp  is_ordered.cpp  (+22 more)
